# cmake-external-project-test

./: .gitignore  CMakeLists.txt  LICENSE  README.md  b
src/: main.cpp
